# val

./: .gitignore  README.md  pyproject.toml
data/: match_6b829358-096d-47f9-aeb6-3748347946b1.json  match_ids.txt
docs/: PLAN.md  README.md  api.md
src/py/: collect_ids.py  inspect_json.py
